--- a/templates/index.html
+++ b/templates/index.html
@@ -143,10 +143,16 @@
                             </div>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
+                        {% if not current_user.is_authenticated: %}
                         <div class="navbar-nav ml-auto py-0">
-                            <a href="" class="nav-item nav-link">Login</a>
-                            <a href="" class="nav-item nav-link">Register</a>
+                            <a href="{{ url_for('login') }}" class="nav-item nav-link">Login</a>
+                            <a href="{{ url_for('register') }}" class="nav-item nav-link">Register</a>
                         </div>
+                        {% else: %}
+                        <div class="navbar-nav ml-auto py-0">
+                            <a href="{{ url_for('logout') }}" class="nav-item nav-link">Log Out</a>
+                        </div>
+                        {% endif %}
                     </div>
                 </nav>
                 <div id="header-carousel" class="carousel slide" data-ride="carousel">
