--- a/templates/cart.html
+++ b/templates/cart.html
@@ -171,8 +171,10 @@
             <div class="col-lg-4">
 
                  {% if "discount" in session: %}
+                 <form method="post" action="{{ url_for('remove_discount') }}">
                          <h5 class="font-weight-bold">{{session["discount"][0]["name"]}}
                              <button class="btn btn-sm btn-primary"><i class="fa fa-times"></i></button></h5>
+                 </form>
                 {% endif %}
 
                 <form class="mb-5" method="post" action="{{ url_for('check_discount') }}">
