--- a/templates/header.html
+++ b/templates/header.html
@@ -65,9 +65,9 @@
                 </a>
             </div>
             <div class="col-lg-6 col-6 text-left">
-                <form action="">
+                  <form method="get" action="{{ url_for('search') }}">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for products">
+                        <input name="q" type="text" class="form-control" placeholder="Search for products">
                         <div class="input-group-append">
                             <span class="input-group-text bg-transparent text-primary">
                                 <i class="fa fa-search"></i>
@@ -107,7 +107,7 @@
                     <h6 class="m-0">Categories</h6>
                     <i class="fa fa-angle-down text-dark"></i>
                 </a>
-                <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
+                <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); position:absolute; z-index: 2; ">
                     <div class="navbar-nav w-100 overflow-hidden" style="height: 410px">
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link" data-toggle="dropdown">Dresses <i class="fa fa-angle-down float-right mt-1"></i></a>
@@ -151,10 +151,17 @@
                             </div>
                             <a href="contact.html" class="nav-item nav-link active">Contact</a>
                         </div>
+                        {% if current_user.is_authenticated: %}
+                         <div class="navbar-nav ml-auto py-0">
+                             <a href="{{ url_for('my_orders') }}" class="nav-item nav-link">My Orders</a>
+                            <a href="{{ url_for('logout') }}" class="nav-item nav-link">Logout</a>
+                         </div>
+                        {% else: %}
                         <div class="navbar-nav ml-auto py-0">
-                            <a href="" class="nav-item nav-link">Login</a>
-                            <a href="" class="nav-item nav-link">Register</a>
+                            <a href="{{ url_for('login') }}" class="nav-item nav-link">Login</a>
+                            <a href="{{ url_for('register') }}" class="nav-item nav-link">Register</a>
                         </div>
+                        {% endif %}
                     </div>
                 </nav>
             </div>
